# genauthz_htaccess

./: Makefile.am  configure.ac  genauthz_htaccess_main.c
docs/: xacml_MPI_htaccess_profile.odt
example/: htaccess  policy.conf  xacml_request.json  xacml_request.xml
